php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48533 __callStatic is not invoked for private/protected methods
Submitted: 2009-06-11 20:04 UTC Modified: 2009-06-12 01:05 UTC
From: ladislav at marek dot su Assigned: felipe (profile)
Status: Closed Package: Class/Object related
PHP Version: 5.3CVS-2009-06-11 (snap) OS: Linux
Private report: No CVE-ID: None
 [2009-06-11 20:04 UTC] ladislav at marek dot su
Description:
------------
__callStatic is not invoked when called method is defined as private or protected.

Reproduce code:
---------------
class Test
{
    private static function foo()
    {
    }

    public static function __callStatic($name, $args)
    {
        var_dump($name);
    }
}

Test::foo();

Expected result:
----------------
string(3) "foo" 

Actual result:
--------------
Fatal error: Call to private method Test::foo() from context '' in %s on line %i

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-06-12 01:05 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 19:00:02 2026 UTC