- Fixed bug #48533 (__callStatic is not invoked for private/protected methods)